# LSSVM

./: .gitignore  LICENSE.md  LSSVC.ipynb  LSSVM.ipynb  Makefile  README.md  aux_func.py  df.csv  load_dataset.py  lssvm.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  claude.yml  code_quality.yml  codeql-analysis.yml  slow-tests.yml
datasets/wall_following/: sensor_readings_2.data  sensor_readings_4.data
examples/: gridsearch_lssvc_example.py
lssvm/: LSSVC.py  LSSVC_GPU.py  __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_behavior.py  test_edge_cases.py  test_errors.py  test_integration.py  test_kernels.py  test_multiclass.py  test_properties.py  typing.py
utils/: __init__.py  conversion.py  encoding.py  import_export.py  kernel.py
